# cw-metrics

./: Cargo.toml  README.md  aws-account-info.toml
resources/: kinesis-traffic.json
src/: main.rs
