[package]
name = "cw-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.9.0"
aws-sdk-cloudwatch = "0.9.0"
clap = "3.1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"]}
serde = { version = "1.0", features = ["derive"] }
toml = "0.4.2"
