[package]
name = "cw-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-cloudwatch = "0.19.0"
aws-sdk-iam= "0.19.0"
aws-sdk-sts= "0.19.0"
aws-types = "0.49.0"
aws-sdk-config= "0.19.0"
clap = "3.1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"]}
serde = { version = "1.0.2", features = ["derive"] }
serde_json = {version = "1.0.2", fatures = ["derive"] }
toml = "0.4.2"

[net]
git-fetch-with-cli = true
